# Drf_React_ToDO

./: README.md  pyproject.toml
apps/user_app/: models.py  serializers.py  views.py
apps/user_app/migrations/: 0001_initial.py
core/: settings.py  urls.py
